# nexus-forge

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  app.py  docker-compose.yml  dvc.yaml  pyproject.toml
.cursor/: mcp.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  good_first_issue.yml  model_request.yml
.github/workflows/: ci.yml  nightly.yml  publish.yml  release.yml
config/: config.yaml
config/rubrics/: default.yaml  strict.yaml
docs/: DEPLOY.md  GEVAL.md  K8S_AUTOSCALING.md  MCP_PLUGIN.md  MODEL_CARD.md  benchmarks.md  human_eval_template.md
docs/assets/: record-demo.sh
notebooks/: nexus_forge_demo.ipynb
scripts/: demo.py  deploy_hf_space.sh  export_onnx.py  export_openapi.py  generate_demo_gif.py  generate_demo_png.py  publish_pypi.sh  run_benchmarks.py  run_pipeline.py  train_gpu.sh  verify_demo_gif.py
skills/summarizehub/: SKILL.md
skills/summarizehub/references/: api-examples.md  mcp-config.json
skills/summarizehub/scripts/: smoke-test.sh
spaces/: README.md  app.py  requirements.txt  space.yaml
src/textSummarizer/: __init__.py  cli.py
src/textSummarizer/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_evaluation.py  model_trainer.py  prediction.py
src/textSummarizer/config/: configuration.py
src/textSummarizer/entity/: __init__.py  config_entity.py
src/textSummarizer/evaluation/: __init__.py  metrics.py
src/textSummarizer/export/: __init__.py  onnx.py
src/textSummarizer/grading/: __init__.py  geval.py  llm_judge.py  loop.py  rubric.py  rubric_loader.py
src/textSummarizer/integrations/: __init__.py  langchain_tools.py
src/textSummarizer/logging/: __init__.py
src/textSummarizer/mcp/: __init__.py  __main__.py  server.py
src/textSummarizer/models/: __init__.py  abstractive.py  base.py  cache.py  onnx_summarizer.py  registry.py
src/textSummarizer/multimodal/: __init__.py  audio.py  base.py  image.py  router.py  video.py
src/textSummarizer/pipeline/: stage_01_data_ingestion.py  stage_02_data_validation.py  stage_03_data_transformation.py  stage_04_model_trainer.py  stage_05_model_evaluation.py
src/textSummarizer/pipelines/: __init__.py  chunking.py  citations.py  hierarchical.py  map_reduce.py  rag.py  refine.py  stuff.py
src/textSummarizer/serving/: app.py  auth.py  gpu_pool.py  sandbox.py
src/textSummarizer/utils/: common.py
tests/fixtures/: benchmark_samples.json
tests/integration/: test_api.py  test_multimodal_api.py
tests/unit/: test_auth_streaming.py  test_cache.py  test_citations.py  test_evaluation.py  test_geval_rubric.py  test_grade_api.py  test_grading.py  test_hierarchical_rag.py  test_imports.py  test_langchain.py  test_mcp_tools.py  test_multi_doc_rag.py  test_multimodal.py  test_onnx.py  test_pipelines.py  test_sandbox.py  test_video.py
